kubernetes/apps/network/static-routes/app/home-assistant/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant
  namespace: home
subsets:
- addresses:
  - ip: 192.168.0.2
  ports:
  - port: 80
