kubernetes/apps/network/static-routes/app/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app home-assistant
  namespace: network
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http

---
apiVersion: v1
kind: Endpoints
metadata:
  name: *app
  namespace: network
subsets:
- addresses:
  - ip: 192.168.0.2
  ports:
  - port: 80
